Fixed some letter-spacing issues. Now the user can supply their own letter-spacing values

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 h1 {
-  font-family: 'raleway', sans-serif;
-  font-weight: 900;
+  font-family: 'bowlby-one', sans-serif;
+  letter-spacing: -5px; 
 }
